<resources>
    <string name="app_name">EducationalGame</string>
    <string name="welcome_prompt_reflex">Welcome to Reflection Training!</string>
    <string name="welcome_prompt_math">Welcome to Math Training!</string>
    <string name="InitialScore">Score: 0</string>
    <string name="time_left">Time left:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="wait_for_instruction">Wait for Instruction</string>
    <string name="start">start</string>
    <string name="difficulty_level_easy">Difficulty Level: 1 (Easy)</string>
    <string name="difficulty_level_medium">Difficulty Level: 2 (Medium)</string>
    <string name="difficulty_level_hard">Difficulty Level: 3 (Hard)</string>
    <string name="game_mode">Game Mode:</string>
    <string name="game_mode_easy">Game Mode: Easy</string>
    <string name="game_mode_medium">Game Mode: Medium</string>
    <string name="game_mode_hard">Game Mode: Hard</string>
    <string name="game_instruction_reflex">Wait for a direction show up on the screen, and swipe to that direction.\n\nGame ends when timer runs out, or an incorrect gesture given. Timer for each round will gradually decrease till it reaches minimum time interval for selected difficulty.\n\nScore will be multiplied by difficulty level.</string>
    <string name="game_instruction_math">Solve random Math equations by fill in correct Math Operators (+, -, *, /) at two missing places.\n\nGame ends when timer runs out, or wrong input was given. Timer for each round is 15 seconds (unchangeable!).\n\n*\tDivision used is "Integer Division" (1/3=0, 7/2=3)\n\n**\tStuck at current problem?\n\t\tShake phone to change math equation</string>
    <string name="homepage_welcome">Hello,\nPick a Game and gets started</string>
    <string name="reflex">Reflex</string>
    <string name="math">Math</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="pin_hint">PIN (6 digits number)</string>
    <string name="username_hint">Username (8 letters max)</string>
    <string name="created_by">Created by Sihan Chen</string>
    <string name="app_title">Educational Games</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="rank_explanation">Rank by total score (reflex + math)</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="username">Username</string>
    <string name="total">Total</string>
    <string name="hello">Hello</string>
    <string name="mathOpAdd">+</string>
    <string name="reset">reset</string>
    <string name="mathOpMultiply">*</string>
    <string name="submit">submit</string>
    <string name="mathOpDivide">/</string>
    <string name="mathOpMinus">-</string>
    <string name="mathYString">Y)</string>
    <string name="mathOpMissing">\?</string>
    <string name="mathOpEqual">=</string>
    <string name="mathZString">Z</string>
    <string name="mathXString">(X</string>
    <string name="mathResultString">K</string>
    <string name="share">share</string>
</resources>