<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".Scoreboard">

    <TextView
        android:id="@+id/tvScoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/scoreboard"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRankingSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rank_explanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvScoreboard" />

    <TableLayout
        android:id="@+id/tlScoreboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGrey"
        android:paddingVertical="4sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRankingSystem"
        app:layout_constraintVertical_bias="0.061">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tvScoreboardUsername"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvScoreboardReflex"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/reflex"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvScoreboardMath"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/math"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvScoreboardTotal"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/total"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>